[tool.poetry]
name = "chatgptslackbot"
version = "0.1.0"
description = "chat bot gpt"
authors = ["Agustin Canavari <24359306+agustincanavari@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "3.10.4"
slack-bolt = "^1.16.0"
revChatGPT = "^0.0.44"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
